Content_Box init

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     </nav>
     <main>
       <h1>Home page</h1>
+      <nav>
+        <a href= "./Content_box.html">Content Box</a>
+      </nav>
     </main>
   </body>
 </html>
