--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
       <h1>Home page</h1>
       <nav>
-        <a href= "./Content_box.html">Content Box</a>
+        <a href= "./content_box.html">Content Box</a>
       </nav>
     </main>
   </body>
