--- a/content_box.html
+++ b/content_box.html
@@ -23,7 +23,7 @@
         </p>
       </div>
       <div class="box">
-        <div class="icon"><i class="fa fa-shield" aira-hidden="true"></i></div>
+        <div class="icon"><i class="fa fa-search"" aira-hidden="true"></i></div>
         <h3>Content</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div class="box">
-        <div class="icon"><i class="fa fa-shield" aira-hidden="true"></i></div>
+        <div class="icon"><i class="fa fa-home" aira-hidden="true"></i></div>
         <h3>Content</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
