image_slider init

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     </nav>
     <main>
       <h1>Home page</h1>
-      <nav>
+      <nav class="sub_nav">
         <a href= "./content_box.html">Content Box</a>
+        <a href= "./image_slider.html">Image Slider</a>
       </nav>
     </main>
   </body>
